To modify the serializer

--- a/templates/reset_password_form.html
+++ b/templates/reset_password_form.html
@@ -17,10 +17,10 @@
     <form action="{% url 'password_reset'  jwt_token=jwt_token %}" method="post">
         {% csrf_token %}
         <label for="id_new_password">New Password:</label>
-        <input type="password" id="id_new_password" name="new_password" required>
+        <input type="password" id="id_new_password" name="password" required>
         <br>
         <label for="id_confirm_password">Confirm New Password:</label>
-        <input type="password" id="id_confirm_password" name="confirm_password" required>
+        <input type="password" id="id_confirm_password" name="password2" required>
         <br>
         <button type="submit">Reset Password</button>
     </form>
